hopefully a fix for the unintentionally change from square to round buttons on ios devices

--- a/src/SASS/Screens/game.scss
+++ b/src/SASS/Screens/game.scss
@@ -118,6 +118,7 @@ div.game {
 			justify-content: center;
 			align-items: center;
 			cursor: pointer;
+			border-radius: 0;
 
 			img {
 				user-select: none;
